Added javadocs
Signed-off-by: Laird Nelson <laird.nelson@oracle.com>